1.2.7:
	...
Next version:
	-added Portuguese translation (thanks to Talgatti)