@@ -51,6 +51,9 @@
     <None Include="i18n\it.json" />
     <None Include="i18n\es.json" />
     <None Include="packages.config" />
+    <None Include="i18n\fr.json" />
+    <None Include="i18n\ja.json" />
+    <None Include="i18n\pt.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="i18n\" />
