@@ -2,3 +2,8 @@
 	...
 Next version:
 	-added Portuguese translation (thanks to Talgatti)
+	-added Spanish translation
+	-added Chinese translation
+	-added French translation
+	-added Japanese translation
+	-added Italian translation
